// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG gAkelF sc-GTWni eVmJHO sc-gsxnyZ dHyYZs"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG brBCdy sc-GTWni eVmJHO sc-gsxnyZ gQsiKP"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
